[package]
name = "ctxjs"
version = "0.4.0"
edition = "2021"

[profile.release]
opt-level = 3

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "ctxjs_module_bytecode_builder"
path = "src/bin/ctxjs_module_bytecode_builder/main.rs"

[dependencies]
rquickjs = { version = "0.11.0", features = ["full-wasi"] }
wasm-minimal-protocol = { git = "https://github.com/typst-community/wasm-minimal-protocol" }
base64 = "0.22.1"
infer = { version = "0.19.0", default-features = false }
minicbor = { git = "https://github.com/lublak/minicbor", branch = "raw_half", features = [
    "std",
    "half",
] }
half = { version = "2.7.1", optional = true }
